--- a/myfolder.ipynb
+++ b/myfolder.ipynb
@@ -6,11 +6,58 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data:  [45, 55, 60, 50, 80, 62, 54, 58, 71, 48]\n",
+      "Mean:  58.3\n",
+      "Mode:  45\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "import statistics\n",
+    "\n",
+    "# Data for the 10 students\n",
+    "data = [45, 55, 60, 50, 80, 62, 54, 58, 71, 48]\n",
+    "print(\"Data: \", data)\n",
+    "\n",
+    "\n",
+    "# Calculate the mean using statistics module\n",
+    "mean = statistics.mean(data)\n",
+    "print(\"Mean: \", mean)\n",
+    "\n",
+    "# Calculate the mean using statistics module\n",
+    "mode = statistics.mode(data)\n",
+    "print(\"Mode: \", mode)"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
